--- a/htmltest.html
+++ b/htmltest.html
@@ -1,14 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta data-react-helmet="ture" name="theme-color" content="#cb3837">
+  <!--   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
   <title>Document</title>
+  <base href="http://www.baidu.com/img/" target="_blank" />
 </head>
 
 <body>
-
+  <a id="top" href="http://www.baidu.com" target="_self">百度一下</a>
+  <br>
+  <a href="http://www.baidu.com">新窗口百度一下</a>
+  <br>
+  <a href="mailto:tan_clf@126.com?title=1&subject=2&content=3">联系我e-mail</a>
+  <br>
+  <a href="tel:15691739596">电话联系我</a>
+  <br>
+  <a href="tencent:temp-chat?QQ=781550604">Q我吧</a>
+  <br>
+  <!-- <a href="">刷新</a> -->
+  <!-- 空链接会刷新页面 当前设置base导致不能实现功能 -->
+  <br>
+  <a href="file:///Users/codetan/Downloads/Git/favicon.ico" target="_self" download="download.ico">下载pdf</a>
+  <!-- 下载？？？？？ -->
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <a href="file:///Users/codetan/Downloads/Git/htmltest.html#top" target="_self">
+    <img src="http://www.baidu.com/img/dong_54209c0ff3da32eecc31f340c08a18f6.gif" alt="没有找到图片" height="100px"
+      title="baidu-logo" />
+  </a>
 </body>
 
 </html>
