--- a/htmltest.html
+++ b/htmltest.html
@@ -117,16 +117,17 @@
     <dd>macbook</dd>
   </dl>
   <br>
-  <form action="http://www.baidu.com/s" target="_blank"></form>
-  <fieldset>
-    <legend>百度一下</legend>
-    <a href="file:///Users/codetan/Downloads/Git/htmltest.html#top" target="_self">
-      <img src="http://www.baidu.com/img/dong_54209c0ff3da32eecc31f340c08a18f6.gif" alt="没有找到图片" height="100px"
-        width="200px" title="baidu-logo" />
-    </a><br>
-    <input type="text" name="wd" placeholder="百度一下">
-    <button>百度一下</button>
-  </fieldset>
+
+  <form action="http://www.baidu.com/s" target="_blank">
+    <fieldset>
+      <legend>百度一下</legend>
+      <a href="file:///Users/codetan/Downloads/Git/htmltest.html#top" target="_self">
+        <img src="http://www.baidu.com/img/dong_54209c0ff3da32eecc31f340c08a18f6.gif" alt="没有找到图片" height="100px"
+          width="200px" title="baidu-logo" />
+      </a><br>
+      <input type="text" name="wd">
+      <button>百度一下</button>
+    </fieldset>
   </form>
 </body>
 
