--- a/csstest.html
+++ b/csstest.html
@@ -1,41 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="csstest.css">
-    <title>csstest</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="csstest.css">
+  <title>csstest</title>
 </head>
+
 <body>
-    <header>
-        <div class="header">请调整浏览器窗口大小查看效果</div>
-    </header>
-    <div class="body">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur doloremque, quidem sint, in ratione odit libero repudiandae reiciendis distinctio aut similique deleniti. Totam ea eligendi dolore ex rerum, similique exercitationem, doloribus, placeat distinctio sit suscipit doloremque eos ratione vero harum?</p>
-        <ul class="cards">
-            <li>1</li>
-            <li>2</li>
-            <li>3</li>
-            <li>4</li>
-            <li>5</li>
-            <li>6</li>
-            <li>7</li>
-            <li>8</li>
-            <li>9</li>
-            <li>10</li>
-            <li>11</li>
-            <li>12</li>
-        </ul>
-        <ul class="links">
-            <li>link</li>
-            <li>link</li>
-            <li>link</li>
-            <li>link</li>
-        </ul>
+  <header>
+    <div class="header">请调整浏览器窗口大小查看效果</div>
+  </header>
+  <div class="body">
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur doloremque, quidem sint, in ratione odit
+      libero repudiandae reiciendis distinctio aut similique deleniti. Totam ea eligendi dolore ex rerum, similique
+      exercitationem, doloribus, placeat distinctio sit suscipit doloremque eos ratione vero harum?</p>
+    <ul class="cards">
+      <li>1</li>
+      <li>2</li>
+      <li>3</li>
+      <li>4</li>
+      <li>5</li>
+      <li>6</li>
+      <li>7</li>
+      <li>8</li>
+      <li>9</li>
+      <li>10</li>
+      <li>11</li>
+      <li>12</li>
+    </ul>
+
+    <div class="inline">
+      <span>1</span>
+      <span>2</span>
+      <span>3</span>
+      <span>4</span>
+      <span>5</span>
+      <span>6</span>
+      <span>7</span>
+      <span>8</span>
+      <span>9</span>
+      <span>10</span>
+      <span>11</span>
+      <span>12</span>
     </div>
-    <footer>
-        <p>©️版权所有<br>本页所有元素布局均使用块元素</p>
-    </footer>
-    
+
+    <ul class="links">
+      <li>link</li>
+      <li>link</li>
+      <li>link</li>
+      <li>link</li>
+    </ul>
+
+    <ul class="inline-block">
+      <li>test</li>
+      <li>test</li>
+      <li>test</li>
+      <li>test</li>
+    </ul>
+  </div>
+  <footer>
+    <p>©️版权所有<br>本页所有元素布局均使用块元素</p>
+  </footer>
+
 </body>
+
 </html>
