--- a/position test.html
+++ b/position test.html
@@ -228,6 +228,173 @@
     #p1 {
       background-color: #e0e0e0;
     }
+
+    /* css sprite制作动态图片 */
+    .inline-block {
+      display: inline-block;
+
+    }
+
+    #active {
+      text-align: center;
+    }
+
+    #horse {
+      width: 75px;
+      height: 108px;
+      margin: auto;
+      background-image: url(horse.png);
+      background-position: 0 0;
+    }
+
+    #horse:hover {
+      background-position: -5250px 0;
+      transition-duration: 6s;
+      transition-delay: 0s;
+      transition-timing-function: steps(70);
+    }
+
+    #green {
+      width: 98px;
+      height: 156px;
+      margin: auto;
+      background-image: url(greenman.png);
+      background-position: -1px 0;
+    }
+
+    #green:hover {
+      background-position: -14897px 0;
+      transition-duration: 12.5s;
+      transition-delay: 0s;
+      transition-timing-function: steps(152);
+    }
+
+    #blue {
+      width: 67px;
+      height: 144px;
+      margin: auto;
+      background-image: url(blueman.png);
+      background-position: 0 0;
+    }
+
+    #blue:hover {
+      background-position: -5159px 0;
+      transition-duration: 7s;
+      transition-delay: 0s;
+      transition-timing-function: steps(77);
+    }
+
+    #red {
+      width: 135px;
+      height: 156px;
+      margin: auto;
+      background-image: url(redman.png);
+      background-position: 0 0;
+    }
+
+    #red:hover {
+      background-position: -7830px 0;
+      transition-duration: 5.2s;
+      transition-delay: 0s;
+      transition-timing-function: steps(58);
+    }
+
+    #yellow {
+      width: 65px;
+      height: 102px;
+      margin: auto;
+      background-image: url(yellowdinosaur.png);
+      background-position: 0 0;
+    }
+
+    #yellow:hover {
+      background-position: -3315px 0;
+      transition-duration: 4.6s;
+      transition-delay: 0s;
+      transition-timing-function: steps(51);
+    }
+
+    /* 伪元素 */
+    li[data-tip]::before {
+      content: attr(data-tip);
+      position: absolute;
+      z-index: 1;
+      background-color: rosybrown;
+      border-radius: 3px;
+      color: white;
+      padding: 2px 6px;
+      font-size: 12px;
+      right: 0px;
+      bottom: 40px;
+    }
+
+    li[data-tip]::after {
+      content: '';
+      position: absolute;
+      z-index: 1;
+      border: 3px solid;
+      border-color: rosybrown transparent transparent rosybrown;
+      font-size: 0px;
+      right: 40px;
+      bottom: 36px;
+    }
+
+    #content,
+    #menubg {
+      display: inline-block;
+    }
+
+    #content {
+      vertical-align: top;
+      padding: 80px;
+      /* display: none; */
+    }
+
+    #key {
+      display: none;
+    }
+
+    label#ios-checkbox {
+      display: inline-block;
+      border: 2px solid silver;
+      border-radius: 15px;
+      height: 30px;
+      width: 50px;
+      transition: .3s;
+      box-sizing: border-box;
+      box-shadow: 0 0 5px #666666;
+      /* padding: 7px; */
+    }
+
+    label#ios-checkbox::before {
+      content: '';
+      display: inline-block;
+      height: 24px;
+      width: 24px;
+      border: 0px;
+      box-shadow: 0 0 8px #555555;
+      border-radius: 100px;
+      background-color: #fdfcf8;
+      transition: .3s;
+      position: relative;
+      top: 1px;
+      left: 1px;
+    }
+
+    #key:checked+#ios-checkbox {
+      background-color: #34eb06;
+      border-color: #20e030;
+      /* box-shadow: 0 0 2px 100px #20e030 inset; */
+      border-width: 15px;
+    }
+
+    #key:checked+#ios-checkbox::before {
+      /* margin-left: 65px; */
+      /* top: -30px;
+      left: 35px; */
+      top: -12px;
+      left: 9px;
+    }
   </style>
 </head>
 
@@ -239,11 +406,11 @@
     <div>
       <ul id="cav">
         <li id="h"><a href="#">HTML/CSS</a></li>
-        <li id="b"><a href="#">Browser Side</a></li>
+        <li id="b" data-tip="新功能"><a href="#">Browser Side</a></li>
         <li id="s"><a href="#">Server Side</a></li>
         <li id="p"><a href="#">Programming</a></li>
         <li id="x"><a href="#">XML</a></li>
-        <li id="w"><a href="#">Web Building</a></li>
+        <li id="w" data-tip="新上线"><a href="#">Web Building</a></li>
         <li id="r"><a href="#">Reference</a></li>
       </ul>
       <div>
@@ -321,8 +488,10 @@
           </div>
           <ul>
         </div>
-        <div></div>
-        <div></div>
+        <div id="content">
+          <input type="checkbox" name="checkbox" id="key">
+          <label for="key" id="ios-checkbox"></label>
+        </div>
       </div>
     </div>
   </div>
@@ -347,58 +516,13 @@
       <a href="#">蒙ICP备06004630</a>
     </p>
   </footer>
-  <ul>
-    <li>01</li>
-    <li>02</li>
-    <li>03</li>
-    <li>04</li>
-    <li>05</li>
-    <li>06</li>
-    <li>07</li>
-    <li>08</li>
-    <li>09</li>
-    <li>10</li>
-    <li>11</li>
-    <li>12</li>
-    <li>13</li>
-    <li>14</li>
-    <li>15</li>
-    <li>16</li>
-    <li>17</li>
-    <li>18</li>
-    <li>19</li>
-    <li>20</li>
-    <li>21</li>
-    <li>22</li>
-    <li>23</li>
-    <li>24</li>
-    <li>25</li>
-    <li>26</li>
-    <li>27</li>
-    <li>28</li>
-    <li>29</li>
-    <li>30</li>
-    <li>31</li>
-    <li>32</li>
-    <li>33</li>
-    <li>34</li>
-    <li>35</li>
-    <li>36</li>
-    <li>37</li>
-    <li>38</li>
-    <li>39</li>
-    <li>40</li>
-    <li>41</li>
-    <li>42</li>
-    <li>43</li>
-    <li>44</li>
-    <li>45</li>
-    <li>46</li>
-    <li>47</li>
-    <li>48</li>
-    <li>49</li>
-    <li>50</li>
-  </ul>
+  <div id="active">
+    <div id="horse" class="inline-block"></div>
+    <div id="green" class="inline-block"></div>
+    <div id="red" class="inline-block"></div>
+    <div id="yellow" class="inline-block"></div>
+    <div id="blue" class="inline-block"></div>
+  </div>
 </body>
 
 </html>
