--- a/position test.html
+++ b/position test.html
@@ -19,7 +19,7 @@
     body {
       font-family: PingFangSC-Regular, Verdana, Arial, 微软雅黑, 宋体;
       font-size: 14px;
-      background-color: #fdfcf8;
+      /* background-color: #fdfcf8; */
     }
 
     #logo {
@@ -50,6 +50,7 @@
       background-position: top left;
       position: sticky;
       top: 0px;
+      z-index: 9998;
     }
 
     #cav>li {
@@ -64,6 +65,56 @@
       text-decoration: none;
       text-indent: -9999px;
       overflow: hidden;
+    }
+
+    #cav ul {
+      display: none;
+      position: absolute;
+      top: 100%;
+      left: 0;
+    }
+
+    #cav ul ul {
+      top: 0;
+      left: 100%;
+    }
+
+    #cav li li {
+      position: relative;
+    }
+
+    .level1 li {
+      list-style: none;
+      height: 30px;
+      width: 160px;
+      padding: 10px 0 10px 25px;
+      background-color: rgb(232, 231, 227);
+      font-size: 18px;
+    }
+
+    #cav li:hover>ul {
+      display: block;
+      z-index: 9999;
+    }
+
+    .level1 li:hover {
+      color: white;
+      background-color: #636363;
+    }
+
+    .level2 {
+      color: black;
+    }
+
+    .level1>li:nth-child(2):after {
+      content: '>';
+      display: inline-block;
+      position: absolute;
+      right: 10px;
+    }
+
+    .level1 li {
+      border-bottom: 2px solid white;
     }
 
     #h {
@@ -172,6 +223,7 @@
       background: #fdfcf8;
     }
 
+    /* ******************  定位广告  ***************** */
     #ad {
       height: 317px;
       width: 180px;
@@ -179,9 +231,11 @@
       background-image: url(bg.png);
       background-position: -400px -800px;
       background-repeat: no-repeat;
+      background-color: white;
       top: 100px;
       right: 20px;
       border: 1px solid silver;
+      z-index: 9999;
     }
 
     #ad>div {
@@ -314,7 +368,7 @@
       transition-timing-function: steps(51);
     }
 
-    /* 伪元素 */
+    /* 伪元素      小标签 */
     li[data-tip]::before {
       content: attr(data-tip);
       position: absolute;
@@ -347,6 +401,7 @@
     #content {
       vertical-align: top;
       padding: 80px;
+      width: calc(100% - 345px);
       /* display: none; */
     }
 
@@ -354,13 +409,14 @@
       display: none;
     }
 
+    /* ************************  checkbox   ios **************** */
     label#ios-checkbox {
       display: inline-block;
       border: 2px solid silver;
       border-radius: 15px;
       height: 30px;
       width: 50px;
-      transition: .3s;
+      transition: 0.5s;
       box-sizing: border-box;
       box-shadow: 0 0 5px #666666;
       /* padding: 7px; */
@@ -374,26 +430,411 @@
       border: 0px;
       box-shadow: 0 0 8px #555555;
       border-radius: 100px;
-      background-color: #fdfcf8;
-      transition: .3s;
+      background-color: rgb(244, 244, 244);
+      transition: .5s;
       position: relative;
       top: 1px;
       left: 1px;
+      z-index: 0;
     }
 
     #key:checked+#ios-checkbox {
       background-color: #34eb06;
       border-color: #20e030;
-      /* box-shadow: 0 0 2px 100px #20e030 inset; */
-      border-width: 15px;
+      box-shadow: 0 0 5px #555555;
+      transition-duration: .5s;
     }
 
     #key:checked+#ios-checkbox::before {
-      /* margin-left: 65px; */
-      /* top: -30px;
-      left: 35px; */
-      top: -12px;
-      left: 9px;
+      margin-left: 20px;
+    }
+
+    /* *********************  radio button **************** */
+    .radio-box {
+      display: none;
+    }
+
+    .radio-box+label {
+      display: inline-block;
+      height: 20px;
+      width: 20px;
+      border-radius: 20px;
+      border: 2px solid silver;
+      font-size: 0px;
+      position: relative;
+      box-shadow: 0 0 3px #666666;
+    }
+
+    .radio-box+label::before {
+      content: '';
+      display: inline-block;
+      height: 0px;
+      width: 0px;
+      border-radius: 0px;
+      box-sizing: border-box;
+      right: 0px;
+      left: 0px;
+      top: 0px;
+      bottom: 0px;
+      margin: auto;
+      position: absolute;
+      background-color: green;
+      transition: .3s;
+    }
+
+    .radio-box:checked+label {
+      border-color: green;
+    }
+
+    .radio-box:checked+label::before {
+      height: 14px;
+      width: 14px;
+      border-radius: 10px;
+      border-color: green;
+    }
+
+    #content>div {
+      display: inline-block;
+    }
+
+    /* *******************用户名  密码  table ************** */
+    table.user {
+      width: 100%;
+      border-collapse: separate;
+      border: 2px solid;
+      text-align: center;
+      border-top-left-radius: 5px;
+      border-bottom-left-radius: 5px;
+      border-top-right-radius: 5px;
+      border-bottom-right-radius: 5px;
+    }
+
+    table.user td {
+      border: 2px solid black;
+      border-radius: 5px;
+    }
+
+    .td1 {
+      width: 100px;
+    }
+
+    .td2 {
+      /* width: 100%; */
+    }
+
+    #input-username,
+    #input-password {
+      font-size: inherit;
+      width: 99.8%;
+      border: none;
+    }
+
+    /* ****************username  table  css************* */
+    #content>div.table {
+      display: table;
+      font-size: 18px;
+      margin: 50px 0;
+      width: 100%;
+      border: 1px solid rgb(99, 207, 126);
+      box-sizing: border-box;
+      border-top-left-radius: 5px;
+      border-bottom-left-radius: 5px;
+      border-top-right-radius: 5px;
+      border-bottom-right-radius: 5px;
+    }
+
+    .table-cell {
+      display: table-cell;
+      /* border: 2px solid; */
+    }
+
+    span.table-cell {
+      background-color: rgb(180, 235, 178);
+    }
+
+    #content>div.table>span {
+      width: 1%;
+      border-right: 1px solid rgb(99, 207, 126);
+    }
+
+
+    #input-username2 {
+      width: 100%;
+      font-size: inherit;
+      display: table-cell;
+      border: none;
+    }
+
+    input:focus {
+      outline: 0px;
+    }
+
+    /* *********************  table 表格******************* */
+    table.table-normal {
+      width: 100%;
+      text-align: left;
+      border-collapse: collapse;
+    }
+
+    table.table-normal th,
+    table.table-normal td {
+      border-top: 1px solid rgb(222, 226, 230);
+      padding: 12px;
+    }
+
+    table.table-normal>thead th,
+    table.table-normal>thead td {
+      border-bottom: 2px solid rgb(222, 226, 230);
+    }
+
+    table.table-dark {
+      background-color: rgb(52, 58, 64);
+      color: white;
+    }
+
+    table.table-normal.table-dark th,
+    table.table-normal.table-dark td {
+      border-top: 1px solid rgb(69, 77, 85);
+    }
+
+    table.table-normal.table-dark>thead th,
+    table.table-normal.table-dark>thead td {
+      border-bottom: 2px solid rgb(69, 77, 85);
+    }
+
+    table.table-normal>thead.thead-light {
+      background-color: rgb(233, 236, 239);
+      color: black;
+    }
+
+    table.table-normal>thead.thead-light.thead-dark {
+      background-color: rgb(52, 58, 64);
+      color: white;
+    }
+
+    table.table-normal.table-striped>tbody tr:nth-child(odd) {
+      background-color: rgb(242, 242, 242);
+    }
+
+    table.table-dark.table-striped>tbody tr:nth-child(odd) {
+      background-color: rgb(62, 68, 74);
+    }
+
+    table.table-border td,
+    table.table-border th {
+      border: 1px solid rgb(222, 226, 230);
+    }
+
+    table.table-dark.table-border td,
+    table.table-dark.table-border th {
+      border: 1px solid rgb(69, 77, 85)
+    }
+
+    table.table-normal.table-borderless td,
+    table.table-normal.table-borderless th {
+      border: none;
+    }
+
+    table.table-normal.table-dark.table-borderless td,
+    table.table-normal.table-dark.table-borderless th {
+      border: none;
+    }
+
+    table.table-normal>tbody>tr:hover {
+      background-color: rgb(236, 236, 236);
+    }
+
+    table.table-normal.table-striped>tbody>tr:hover {
+      background-color: rgb(236, 236, 236);
+    }
+
+    table.table-normal.table-dark>tbody>tr:hover {
+      background-color: rgb(67, 73, 78);
+    }
+
+    table.table-normal.table-dark.table-striped>tbody>tr:hover {
+      background-color: rgb(67, 73, 78);
+    }
+
+    table.table-normal.table-small th,
+    table.table-normal.table-small td {
+      padding: 5px;
+    }
+
+    table.table-normal.table-dark.table-small th,
+    table.table-normal.table-dark.table-small td {
+      padding: 5px;
+    }
+
+    /* *****************   picture  ************* */
+    div.picture {
+      width: 600px;
+      height: 400px;
+      border: 3px solid black;
+      position: relative;
+      overflow: hidden;
+      margin: 80px auto;
+      font-size: 0px;
+    }
+
+    div.picture>input {
+      position: relative;
+      top: 10px;
+      left: 10px;
+      z-index: 10;
+      margin: 10px;
+    }
+
+    div.picture>section {
+      position: absolute;
+      display: inline-block;
+      width: 9999px;
+      height: 400px;
+      top: 0px;
+      left: 0px;
+      transition: .5s;
+    }
+
+    div.picture>section>img {
+      display: inline;
+      width: 600px;
+      height: 400px;
+    }
+
+    div.picture>input#check-1:checked~section {
+      left: 0px;
+    }
+
+    div.picture>input#check-2:checked~section {
+      left: -600px;
+    }
+
+    div.picture>input#check-3:checked~section {
+      left: -1200px;
+    }
+
+    div.picture>input#check-4:checked~section {
+      left: -1800px;
+    }
+
+    div.picture>input#check-1:checked~label[for="check-4"] {
+      display: block;
+      position: absolute;
+      left: 20px;
+      top: 180px;
+      z-index: 20;
+    }
+
+    div.picture>input#check-1:checked~label[for="check-4"]>span::before {
+      content: '<';
+      z-index: 30;
+      font-size: 30px;
+      color: white;
+    }
+
+    div.picture>input#check-1:checked~label[for="check-2"] {
+      display: block;
+      position: absolute;
+      right: 20px;
+      top: 180px;
+      z-index: 20;
+    }
+
+    div.picture>input#check-1:checked~label[for="check-2"]>span::before {
+      content: '>';
+      z-index: 30;
+      font-size: 30px;
+      color: white;
+    }
+
+    div.picture>input#check-2:checked~label[for="check-1"] {
+      display: block;
+      position: absolute;
+      left: 20px;
+      top: 180px;
+      z-index: 20;
+    }
+
+    div.picture>input#check-2:checked~label[for="check-1"]>span::before {
+      content: '<';
+      z-index: 30;
+      font-size: 30px;
+      color: white;
+    }
+
+    div.picture>input#check-2:checked~label[for="check-3"] {
+      display: block;
+      position: absolute;
+      right: 20px;
+      top: 180px;
+      z-index: 20;
+    }
+
+    div.picture>input#check-2:checked~label[for="check-3"]>span::before {
+      content: '>';
+      z-index: 30;
+      font-size: 30px;
+      color: white;
+    }
+
+    div.picture>input#check-3:checked~label[for="check-2"] {
+      display: block;
+      position: absolute;
+      left: 20px;
+      top: 180px;
+      z-index: 20;
+    }
+
+    div.picture>input#check-3:checked~label[for="check-2"]>span::before {
+      content: '<';
+      z-index: 30;
+      font-size: 30px;
+      color: white;
+    }
+
+    div.picture>input#check-3:checked~label[for="check-4"] {
+      display: block;
+      position: absolute;
+      right: 20px;
+      top: 180px;
+      z-index: 20;
+    }
+
+    div.picture>input#check-3:checked~label[for="check-4"]>span::before {
+      content: '>';
+      z-index: 30;
+      font-size: 30px;
+      color: white;
+    }
+
+    div.picture>input#check-4:checked~label[for="check-3"] {
+      display: block;
+      position: absolute;
+      left: 20px;
+      top: 180px;
+      z-index: 20;
+    }
+
+    div.picture>input#check-4:checked~label[for="check-3"]>span::before {
+      content: '<';
+      z-index: 30;
+      font-size: 30px;
+      color: white;
+    }
+
+    div.picture>input#check-4:checked~label[for="check-1"] {
+      display: block;
+      position: absolute;
+      right: 20px;
+      top: 180px;
+      z-index: 20;
+    }
+
+    div.picture>input#check-4:checked~label[for="check-1"]>span::before {
+      content: '>';
+      z-index: 30;
+      font-size: 30px;
+      color: white;
     }
   </style>
 </head>
@@ -405,7 +846,20 @@
     </header>
     <div>
       <ul id="cav">
-        <li id="h"><a href="#">HTML/CSS</a></li>
+        <li id="h" data-tip="级联菜单"><a href="#">HTML/CSS</a>
+          <ul class="level1">
+            <li class="level-li1">HTML5</li>
+            <li class="level-li1">HTML
+              <ul class="level2">
+                <li class="level-li2">HTML4.0</li>
+                <li class="level-li2">HTML1.0</li>
+                <li class="level-li2">XHTML</li>
+              </ul>
+            </li>
+            <li class="level-li1">CSS</li>
+            <li class="level-li1">CSS3</li>
+          </ul>
+        </li>
         <li id="b" data-tip="新功能"><a href="#">Browser Side</a></li>
         <li id="s"><a href="#">Server Side</a></li>
         <li id="p"><a href="#">Programming</a></li>
@@ -489,8 +943,78 @@
           <ul>
         </div>
         <div id="content">
-          <input type="checkbox" name="checkbox" id="key">
-          <label for="key" id="ios-checkbox"></label>
+          <div>
+            <input type="checkbox" name="checkbox" id="key">
+            <label for="key" id="ios-checkbox"></label>
+          </div>
+          <div>
+            <input type="radio" name="radio-box" id="radio-box1" class="radio-box">
+            <label for="radio-box1" id="radiobox1"></label>
+            <input type="radio" name="radio-box" id="radio-box2" class="radio-box">
+            <label for="radio-box2" id="radiobox2"></label>
+            <input type="radio" name="radio-box" id="radio-box3" class="radio-box">
+            <label for="radio-box3" id="radiobox3"></label>
+          </div>
+          <table class="user">
+            <tr>
+              <td class="td1">用户名</td>
+              <td class="td2"><input type="text" name="username" placeholder="Username" id="input-username"></td>
+            </tr>
+            <tr>
+              <td class="td1">密码</td>
+              <td class="td2"><input type="password" name="password" placeholder="Password" id="input-password"></td>
+            </tr>
+          </table>
+          <div class="table">
+            <span class="table-cell">username</span>
+            <input class="table-cell" type="text" id="input-username2" placeholder="Username">
+          </div>
+          <table class="table-normal xtable-dark table-striped xtable-border xtable-borderless xtable-small">
+            <thead class="xthead-light xthead-dark">
+              <tr>
+                <th>#</th>
+                <th>First</th>
+                <th>Last</th>
+                <th>Handle</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th>1</th>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td>@mdo</td>
+              </tr>
+              <tr>
+                <th>2</th>
+                <td>Jacob</td>
+                <td>Thornton</td>
+                <td>@fat</td>
+              </tr>
+              <tr>
+                <th>3</th>
+                <td>Larry </td>
+                <td>The Bird</td>
+                <td>@twitter</td>
+              </tr>
+            </tbody>
+          </table>
+          <div class="picture">
+            <input type="radio" name="check_picture" checked id="check-1">
+            <input type="radio" name="check_picture" id="check-2">
+            <input type="radio" name="check_picture" id="check-3">
+            <input type="radio" name="check_picture" id="check-4">
+            <label for="check-1"><span id="label-1"></span></label>
+            <label for="check-2"><span id="label-2"></span></label>
+            <label for="check-3"><span id="label-3"></span></label>
+            <label for="check-4"><span id="label-4"></span></label>
+            <section>
+              <img src="img/cat1.jpg" alt="">
+              <img src="img/cat2.jpg" alt="">
+              <img src="img/cat3.jpg" alt="">
+              <img src="img/cat4.jpg" alt="">
+            </section>
+          </div>
         </div>
       </div>
     </div>
