修改小米页面

--- a/mi/mi.html
+++ b/mi/mi.html
@@ -240,63 +240,58 @@
             <li class="body-homepage-list"><span>手机 电话卡</span>>
               <div class="body-homepage-list-blocklist">
                 <ul>
-                  <li><a href="#"><img src="80/85d746207b997873ddfcdca0da025f78.jpg" /><span>小米10 pro</span></a>
-                  </li>
-                  <li><a href="#"><img src="80/85d746207b997873ddfcdca0da025f78.jpg" /><span>小米10 pro</span></a></li>
-                  <li><a href="#"><img src="80/85d746207b997873ddfcdca0da025f78.jpg" /><span>小米10 pro</span></a></li>
-                  <li><a href="#"><img src="80/85d746207b997873ddfcdca0da025f78.jpg" /><span>小米10 pro</span></a></li>
-                  <li><a href="#"><img src="80/85d746207b997873ddfcdca0da025f78.jpg" /><span>小米10 pro</span></a></li>
-                  <li><a href="#"><img src="80/85d746207b997873ddfcdca0da025f78.jpg" /><span>小米10 pro</span></a></li>
-                </ul>
-                <ul>
                   <li><a href="#"><img src="80/85d746207b997873ddfcdca0da025f78.jpg" /><span>小米10 pro</span></a></li>
                   <li><a href="#"><img src="80/85d746207b997873ddfcdca0da025f78.jpg" /><span>小米10 pro</span></a></li>
                   <li><a href="#"><img src="80/85d746207b997873ddfcdca0da025f78.jpg" /><span>小米10 pro</span></a></li>
                   <li><a href="#"><img src="80/85d746207b997873ddfcdca0da025f78.jpg" /><span>小米10 pro</span></a></li>
                   <li><a href="#"><img src="80/85d746207b997873ddfcdca0da025f78.jpg" /><span>小米10 pro</span></a></li>
                   <li><a href="#"><img src="80/85d746207b997873ddfcdca0da025f78.jpg" /><span>小米10 pro</span></a></li>
-                </ul>
-                <ul>
+                  <li><a href="#"><img src="80/85d746207b997873ddfcdca0da025f78.jpg" /><span>小米10 pro</span></a></li>
+                  <li><a href="#"><img src="80/85d746207b997873ddfcdca0da025f78.jpg" /><span>小米10 pro</span></a></li>
+                  <li><a href="#"><img src="80/85d746207b997873ddfcdca0da025f78.jpg" /><span>小米10 pro</span></a></li>
+                  <li><a href="#"><img src="80/85d746207b997873ddfcdca0da025f78.jpg" /><span>小米10 pro</span></a></li>
+                  <li><a href="#"><img src="80/85d746207b997873ddfcdca0da025f78.jpg" /><span>小米10 pro</span></a></li>
+                  <li><a href="#"><img src="80/85d746207b997873ddfcdca0da025f78.jpg" /><span>小米10 pro</span></a></li>
                   <li><a href="#"><img src="" /><span>小米10 pro</span></a></li>
                   <li><a href="#"><img src="" /><span>小米10 pro</span></a></li>
                   <li><a href="#"><img src="" /><span>小米10 pro</span></a></li>
                   <li><a href="#"><img src="" /><span>小米10 pro</span></a></li>
                   <li><a href="#"><img src="" /><span>小米10 pro</span></a></li>
                   <li><a href="#"><img src="" /><span>小米10 pro</span></a></li>
-                </ul>
-                <ul>
                   <li><a href="#"><img src="" /><span>小米10 pro</span></a></li>
                   <li><a href="#"><img src="" /><span>小米10 pro</span></a></li>
                   <li><a href="#"><img src="" /><span>小米10 pro</span></a></li>
                   <li><a href="#"><img src="" /><span>小米10 pro</span></a></li>
-                  <li><a href="#"><img src="" /><span>小米10 pro</span></a></li>
-                  <li><a href="#"><img src="" /><span>小米10 pro</span></a></li>
+                  <li></li>
                 </ul>
               </div>
             </li>
-            <li class="body-homepage-list"><span>电视 盒子</span>><div class="body-homepage-list-blocklist">
+            <li class="body-homepage-list"><span>电视 盒子</span>>
+              <div class="body-homepage-list-blocklist">
                 <ul>
-                  <li><a href="#"><img src="80/85d746207b997873ddfcdca0da025f78.jpg" /><span>小米10 pro</span></a>
-                  </li>
-                  <li><a href="#"><img src="80/85d746207b997873ddfcdca0da025f78.jpg" /><span>小米10 pro</span></a></li>
-                  <li><a href="#"><img src="80/85d746207b997873ddfcdca0da025f78.jpg" /><span>小米10 pro</span></a></li>
-                  <li><a href="#"><img src="80/85d746207b997873ddfcdca0da025f78.jpg" /><span>小米10 pro</span></a></li>
-                  <li><a href="#"><img src="80/85d746207b997873ddfcdca0da025f78.jpg" /><span>小米10 pro</span></a></li>
-                  <li><a href="#"><img src="80/85d746207b997873ddfcdca0da025f78.jpg" /><span>小米10 pro</span></a></li>
-                </ul>
-                <ul>
-                  <li><a href="#"><img src="80/85d746207b997873ddfcdca0da025f78.jpg" /><span>小米10 pro</span></a></li>
-                  <li><a href="#"><img src="80/85d746207b997873ddfcdca0da025f78.jpg" /><span>小米10 pro</span></a></li>
-                  <li><a href="#"><img src="80/85d746207b997873ddfcdca0da025f78.jpg" /><span>小米10 pro</span></a></li>
-                  <li><a href="#"><img src="80/85d746207b997873ddfcdca0da025f78.jpg" /><span>小米10 pro</span></a></li>
-                  <li><a href="#"><img src="80/85d746207b997873ddfcdca0da025f78.jpg" /><span>小米10 pro</span></a></li>
-                  <li><a href="#"><img src="80/85d746207b997873ddfcdca0da025f78.jpg" /><span>小米10 pro</span></a></li>
+                  <li>xiaomi</li>
+                  <li>xiaomi</li>
+                  <li>xiaomi</li>
+                  <li>xiaomi</li>
+                  <li>xiaomi</li>
+                  <li>xiaomi</li>
+                  <li>xiaomi</li>
+                  <li>xiaomi</li>
+                  <li>xiaomi</li>
+                  <li>xiaomi</li>
+                  <li>xiaomi</li>
+                  <li>xiaomi</li>
+                  <li>xiaomi</li>
+                  <li>xiaomi</li>
+                  <li>xiaomi</li>
+                  <li>xiaomi</li>
+                  <li></li>
                 </ul>
               </div>
             </li>
-            <li class="body-homepage-list"><span>笔记本 显示器</span>><div class="body-homepage-list-blocklist">3</div>
+            <li class="body-homepage-list"><span>笔记本 显示器</span>><div class="body-homepage-list-blocklist"></div>
             </li>
-            <li class="body-homepage-list"><span>家电 插线板</span>><div class="body-homepage-list-blocklist">4</div>
+            <li class="body-homepage-list"><span>家电 插线板</span>><div class="body-homepage-list-blocklist"></div>
             </li>
             <li class="body-homepage-list"><span>出行 穿戴</span>><div class="body-homepage-list-blocklist"></div>
             </li>
