--- a/mi/mi.html
+++ b/mi/mi.html
@@ -332,7 +332,94 @@
     </div>
 
   </div>
-  <div id="footer"></div>
+  <div id="footer">
+    <div id='footer-list'>
+      <a href="#" class="footer-list-url"><em></em>预约维修服务</a>
+      <a href="#" class="footer-list-url"><em></em>7天无理由退货</a>
+      <a href="#" class="footer-list-url"><em></em>15天免费换货</a>
+      <a href="#" class="footer-list-url"><em></em>满99包邮</a>
+      <a href="#" class="footer-list-url"><em></em>520余家售后网点</a>
+    </div>
+    <div id="footer-page">
+      <dl>
+        <dt>帮助中心</dt>
+        <dd>账户管理</dd>
+        <dd>购物指南</dd>
+        <dd>订单操作</dd>
+      </dl>
+      <dl>
+        <dt>服务支持</dt>
+        <dd>售后政策</dd>
+        <dd>自助服务</dd>
+        <dd>相关下载</dd>
+      </dl>
+      <dl>
+        <dt>线下门店</dt>
+        <dd>小米之家</dd>
+        <dd>服务网点</dd>
+        <dd>授权体验店</dd>
+      </dl>
+      <dl>
+        <dt>关于小米</dt>
+        <dd>了解小米</dd>
+        <dd>加入小米</dd>
+        <dd>投资者关系</dd>
+        <dd>企业社会责任</dd>
+        <dd>廉洁举报</dd>
+      </dl>
+      <dl>
+        <dt>关注我们</dt>
+        <dd>新浪微博</dd>
+        <dd>官方微信</dd>
+        <dd>联系我们</dd>
+        <dd>公益基金会</dd>
+      </dl>
+      <dl>
+        <dt>特色服务</dt>
+        <dd>F码通道</dd>
+        <dd>礼物码</dd>
+        <dd>防伪查询</dd>
+      </dl>
+      <div id="footer-page-ad">
+        <span id="footer-page-ad-phone">400-100-5678</span>
+        <span id="footer-page-ad-time">8:00-18:00（仅收市话费)</span>
+        <a href="#">人工客服</a>
+        <span id="footer-page-ad-mi">关注小米：</span>
+      </div>
+    </div>
+    <div id="footer-footer">
+      <div id="footer-container">
+        <!-- <img src="icon/logo-footer.png" alt=""> -->
+        <div id="footer-container-list">
+          <p>
+            <a href="#">小米商城</a>&nbsp;|
+            <a href="#">MIUI</a>&nbsp;|
+            <a href="#">米家</a>&nbsp;|
+            <a href="#">米聊</a>&nbsp;|
+            <a href="#">多看</a>&nbsp;|
+            <a href="#">游戏</a>&nbsp;|
+            <a href="#">政企服务</a>&nbsp;|
+            <a href="#">小米天猫店</a>&nbsp;|
+            <a href="#">小米集团隐私政策</a>&nbsp;|
+            <a href="#">小米公司儿童信息保护规则</a>&nbsp;|
+            <a href="#">小米商城隐私政策</a>&nbsp;|
+            <a href="#">小米商城用户协议</a>&nbsp;|
+            <a href="#">问题反馈</a>&nbsp;|
+            <a href="#">Select Location</a></p>
+          <p>© mi.com 京ICP证110507号 京ICP备10046444号 京公网安备11010802020134号 京网文[2020]0276-042号</p>
+          <p>（京）网械平台备字（2018）第00005号 互联网药品信息服务资格证 (京)-非经营性-2014-0090 营业执照 医疗器械质量公告</p>
+          <p>增值电信业务许可证 网络食品经营备案 京食药网食备202010048 食品经营许可证</p>
+          <p>违法和不良信息举报电话：171-5104-4404 知识产权侵权投诉 本网站所列数据，除特殊说明，所有数据均出自我司实验室测试</p>
+        </div>
+        <div id="footer-container-icon">
+          <img src="icon/truste.png" alt="">
+          <img src="icon/v-logo-1.png" alt="">
+          <img src="icon/v-logo-2.png" alt="">
+        </div>
+      </div>
+      <div id="footer-flag"></div>
+    </div>
+  </div>
   <div id="fixed">
     <a href="#" id="fixed-1"><span>手机APP</span></a>
     <a href="#" id="fixed-2"><span>个人中心</span></a>
