mi.html flex test

--- a/mi/mi.html
+++ b/mi/mi.html
@@ -330,7 +330,93 @@
         <a href="#"><img src="632*340/c0c05274f2fbb55fbccb89622f798907.jpg" width="316px" height="170px" alt=""></a>
       </div>
     </div>
-
+    <div id="body-homepage-middle">
+      <div id="body-homepage-phone-title">
+        <h2>手机</h2>
+        <a href="#">查看全部<p>></p></a>
+      </div>
+      <div id="body-homepage-phone">
+        <ul>
+          <li>
+            <a href="#">
+              <img src="468*600/574c6643ab91c6618bfb2d0e2c761d0b.jpg" width="234px" height="614px" alt="">
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div class="phone02"><img src="400*400/0099822e42b4428cb25c4cdebc6ca53d.jpg" width="160px" height="160px"
+                  alt=""></div>
+              <h3>小米10 pro</h3>
+              <p class="phone-descrip">100X变焦/65W快充/120Hz屏幕</p>
+              <p class="phone-price">4999元起</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div class="phone03"><img src="400*400/0099822e42b4428cb25c4cdebc6ca53d.jpg" width="160px" height="160px"
+                  alt=""></div>
+              <h3>小米10 pro</h3>
+              <p class="phone-descrip">100X变焦/65W快充/120Hz屏幕</p>
+              <p class="phone-price">4999元起</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div class="phone04"><img src="400*400/0099822e42b4428cb25c4cdebc6ca53d.jpg" width="160px" height="160px"
+                  alt=""></div>
+              <h3>小米10 pro</h3>
+              <p class="phone-descrip">100X变焦/65W快充/120Hz屏幕</p>
+              <p class="phone-price">4999元起</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div class="phone05"><img src="400*400/0099822e42b4428cb25c4cdebc6ca53d.jpg" width="160px" height="160px"
+                  alt=""></div>
+              <h3>小米10 pro</h3>
+              <p class="phone-descrip">100X变焦/65W快充/120Hz屏幕</p>
+              <p class="phone-price">4999元起</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div class="phone06"><img src="400*400/0099822e42b4428cb25c4cdebc6ca53d.jpg" width="160px" height="160px"
+                  alt=""></div>
+              <h3>小米10 pro</h3>
+              <p class="phone-descrip">100X变焦/65W快充/120Hz屏幕</p>
+              <p class="phone-price">4999元起</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div class="phone07"><img src="400*400/0099822e42b4428cb25c4cdebc6ca53d.jpg" width="160px" height="160px"
+                  alt=""></div>
+              <h3>小米10 pro</h3>
+              <p class="phone-descrip">100X变焦/65W快充/120Hz屏幕</p>
+              <p class="phone-price">4999元起</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div class="phone08"><img src="400*400/0099822e42b4428cb25c4cdebc6ca53d.jpg" width="160px" height="160px"
+                  alt=""></div>
+              <h3>小米10 pro</h3>
+              <p class="phone-descrip">100X变焦/65W快充/120Hz屏幕</p>
+              <p class="phone-price">4999元起</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div class="phone09"><img src="400*400/0099822e42b4428cb25c4cdebc6ca53d.jpg" width="160px" height="160px"
+                  alt=""></div>
+              <h3>小米10 pro</h3>
+              <p class="phone-descrip">100X变焦/65W快充/120Hz屏幕</p>
+              <p class="phone-price">4999元起</p>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
   <div id="footer">
     <div id='footer-list'>
@@ -384,7 +470,11 @@
         <span id="footer-page-ad-phone">400-100-5678</span>
         <span id="footer-page-ad-time">8:00-18:00（仅收市话费)</span>
         <a href="#">人工客服</a>
-        <span id="footer-page-ad-mi">关注小米：</span>
+        <span id="footer-page-ad-mi">关注小米:
+          <a href="#"><img src="icon/wb.png" alt=""></a>
+          <a href="#"><img src="icon/wx.png" alt=""></a>
+          <img src="icon/wx-img.png" alt="" id="footer-page-wx-img">
+        </span>
       </div>
     </div>
     <div id="footer-footer">
