mi.html complete

--- a/mi/mi.html
+++ b/mi/mi.html
@@ -331,6 +331,122 @@
       </div>
     </div>
     <div id="body-homepage-middle">
+      <div id="body-homepage-shop-title">
+        <h2>小米闪购</h2>
+      </div>
+      <div id="body-homepage-shop">
+        <div id="body-homepage-shop-head">
+          <div>
+            <div class="round">10:00 场</div>
+            <img src="icon/AQYAFYR6skFSqBUAAAAASUVORK5CYII_.jpg" alt="" width="34px" height="53px">
+            <p>本场已结束</p>
+            <div class="time">
+              <span>00</span>
+              <i>:</i>
+              <span>00</span>
+              <i>:</i>
+              <span>00</span>
+            </div>
+          </div>
+        </div>
+        <input type="radio" name="shopradio" id="shopradio1" checked>
+        <input type="radio" name="shopradio" id="shopradio2">
+        <input type="radio" name="shopradio" id="shopradio3">
+        <div id="body-homepage-shop-radio">
+          <div id="body-homepage-prebutton">
+            <span>&lt;</span>
+            <label for="shopradio1" id="prebutton1">&lt;</label>
+            <label for="shopradio2" id="prebutton2">&lt;</label>
+            <label for="shopradio3" id="prebutton3">&lt;</label>
+          </div>
+          <div id="body-homepage-nextbutton">
+            <span>&gt;</span>
+            <label for="shopradio1" id="nextbutton1">&gt;</label>
+            <label for="shopradio2" id="nextbutton2">&gt;</label>
+            <label for="shopradio3" id="nextbutton3">&gt;</label>
+          </div>
+        </div>
+        <div id="body-homepage-shop-body">
+          <ul>
+            <li><a href="#">
+                <div><img src="400*400/c85b67f1c4f5e460a4be5cea5858264b.jpg" width="160px" height="160x-" alt=""></div>
+                <h3>米家空调伴侣2 白色</h3>
+                <p>传统空调轻松智能化</p>
+                <p class="price">69元</p>
+              </a></li>
+            <li><a href="#">
+                <div><img src="400*400/c1aafa589258a4d9fdf49831b457418d.jpg" width="160px" height="160x-" alt=""></div>
+                <h3>米家空调伴侣2 白色</h3>
+                <p>传统空调轻松智能化</p>
+                <p class="price">69元</p>
+              </a></li>
+            <li><a href="#">
+                <div><img src="400*400/c149537ebb0c2cdb977ddd93200074f4.jpg" width="160px" height="160x-" alt=""></div>
+                <h3>米家空调伴侣2 白色</h3>
+                <p>传统空调轻松智能化</p>
+                <p class="price">69元</p>
+              </a></li>
+            <li><a href="#">
+                <div><img src="400*400/c85b67f1c4f5e460a4be5cea5858264b.jpg" width="160px" height="160x-" alt=""></div>
+                <h3>米家空调伴侣2 白色</h3>
+                <p>传统空调轻松智能化</p>
+                <p class="price">69元</p>
+              </a></li>
+            <li><a href="#">
+                <div><img src="400*400/d26d3a80dd1ab0c6a657f13cb234dade.jpg" width="160px" height="160x-" alt=""></div>
+                <h3>米家空调伴侣2 白色</h3>
+                <p>传统空调轻松智能化</p>
+                <p class="price">69元</p>
+              </a></li>
+            <li><a href="#">
+                <div><img src="400*400/ccd09671448c4cdb4a3817f68f788662.jpg" width="160px" height="160x-" alt=""></div>
+                <h3>米家空调伴侣2 白色</h3>
+                <p>传统空调轻松智能化</p>
+                <p class="price">69元</p>
+              </a></li>
+            <li><a href="#">
+                <div><img src="400*400/d26d3a80dd1ab0c6a657f13cb234dade.jpg" width="160px" height="160x-" alt=""></div>
+                <h3>米家空调伴侣2 白色</h3>
+                <p>传统空调轻松智能化</p>
+                <p class="price">69元</p>
+              </a></li>
+            <li><a href="#">
+                <div><img src="400*400/e277547c6e3329303dd2c20a327424c4.jpg" width="160px" height="160x-" alt=""></div>
+                <h3>米家空调伴侣2 白色</h3>
+                <p>传统空调轻松智能化</p>
+                <p class="price">69元</p>
+              </a></li>
+            <li><a href="#">
+                <div><img src="400*400/e6a35e4dfff70f4195b29e8008716d82.jpg" width="160px" height="160x-" alt=""></div>
+                <h3>米家空调伴侣2 白色</h3>
+                <p>传统空调轻松智能化</p>
+                <p class="price">69元</p>
+              </a></li>
+            <li><a href="#">
+                <div><img src="400*400/ef4c68fed730ec26bf2fa0ff620975c5.jpg" width="160px" height="160x-" alt=""></div>
+                <h3>米家空调伴侣2 白色</h3>
+                <p>传统空调轻松智能化</p>
+                <p class="price">69元</p>
+              </a></li>
+            <li><a href="#">
+                <div><img src="400*400/aabf1a475043266cf4759ec58d0f679c.jpg" width="160px" height="160x-" alt=""></div>
+                <h3>米家空调伴侣2 白色</h3>
+                <p>传统空调轻松智能化</p>
+                <p class="price">69元</p>
+              </a></li>
+            <li><a href="#">
+                <div><img src="400*400/b0ded71f-b235-8f99-ba1c-20f80c3a4231_400x400.jpg" width="160px" height="160x-"
+                    alt=""></div>
+                <h3>米家空调伴侣2 白色</h3>
+                <p>传统空调轻松智能化</p>
+                <p class="price">69元</p>
+              </a></li>
+          </ul>
+        </div>
+      </div>
+      <div id="body-homepage-phone-head">
+        <a href="#"><img src="47addc32aff1d2a84fc4535707190881.webp" alt=""></a>
+      </div>
       <div id="body-homepage-phone-title">
         <h2>手机</h2>
         <a href="#">查看全部<p>></p></a>
